@@ -1,6 +1,4 @@
-AUX liblist-2.1-sharedlib.patch 1613 RMD160 7bd885e7e25b8d2decd0d0d16a08bca104f972dc SHA1 3646e24ba78767aa4ea4fe9360b543e1f9abcaf3 SHA256 3378630ab0470550b8124f36d66b8d294125b1bfd6ab58c371e491aced71cae6
-DIST liblist-2.1.tar.gz 107284 RMD160 174b777d4479af9459e5d47a21d7eee7083bd795 SHA1 eead30d6c5f9b3522ac7b168bc43f6c7f20a2ef2 SHA256 0835c5b58bad54ca7ad684fb9d51fd1ce8c80a7875698a4bd8367dc3375e623f
-EBUILD liblist-2.1-r1.ebuild 1700 RMD160 9ac98e673f6286b4ab6cbbdf7afaf71d3f9b78dc SHA1 71ab3f4c82de350bbb08c5d106547cb58c114f51 SHA256 26c85f9f57953356ea173f90a01acff2cc130d3f79a0b5d6f4530f971546f0ab
-EBUILD liblist-2.1.ebuild 1612 RMD160 9e3f94f56b138531910ff6e3cd659dcacf8a8374 SHA1 af80a7602a9d750074c117b5d562cda3af18ddc2 SHA256 fa64c66669c0e2e843977cbfc404f7afda0faa53b85e0086988b4f0d5a22e12c
+AUX liblist-9999-sharedlib.patch 1470 RMD160 c875b98f2262219521fffedd5e4874fcfca5152d SHA1 d1fbf99578d86cb3f4f35c1271421fb961607273 SHA256 968d9f115409cbde81b6fd90a8f3cf3821627a4a5a81f38d890e4cde87b6a9b9
+EBUILD liblist-9999.ebuild 1777 RMD160 1c13942ca911935e113ec325242a7df76ef8c53b SHA1 2ae7bc395d0f936298f31d1a4aba2e83ae31cd58 SHA256 bc5e0ab9616ffe463fa0ca1ab52e449c3f06fef09a7a6e5c2b67a3925e952cd0
 MISC ChangeLog 789 RMD160 658d737581a0c6ae39fb85f1cfd529aa16c9f721 SHA1 cd6186d9dffd602388b6b089d2f85680c792a68f SHA256 6bf5b78fcf68dea222ec0fc0b4fae9fd1e09211bc6c46df6a766007039e56b4a
 MISC metadata.xml 473 RMD160 97667dfa400a624c3ba66fbaefa5bb5bf592c485 SHA1 8ab2e330cbc7993d95c0492ae14540ab5e0177ac SHA256 197f1543dd37a80c8de5ee4083d4eb659c8be038483895e11225c68e93da11f1
